Aggiunti link social nel footer

--- a/index.html
+++ b/index.html
@@ -170,18 +170,32 @@
       <!-- Icons -->
       <ul class="icons">
         <li>
-          <a href="#" class="icon brands fa-twitter"
-            ><span class="label">Twitter</span></a
+          <a href="https://open.spotify.com/artist/6tCNzEAQzf5O1VHKbAIuo2" target="_blank"
+           class="icon brands fa-spotify"
+            ><span class="label">Youtube</span></a
           >
         </li>
         <li>
-          <a href="#" class="icon brands fa-facebook-f"
+          <a href="https://www.youtube.com/GoodbyeNeverland" target="_blank"
+           class="icon brands fa-youtube"
+            ><span class="label">Youtube</span></a
+          >
+        </li>
+        <li>
+          <a href="https://www.facebook.com/GoodByeNeverland/" target="_blank" 
+           class="icon brands fa-facebook-f"
             ><span class="label">Facebook</span></a
           >
         </li>
         <li>
-          <a href="#" class="icon brands fa-instagram"
+          <a href="https://www.instagram.com/goodbyeneverlandofficial/" target="_blank"
+           class="icon brands fa-instagram"
             ><span class="label">Instagram</span></a
+          >
+        </li>
+        <li>
+          <a href="mailto:goodbyeneverland.gn@gmail.com" class="icon fa-envelope"
+            ><span class="label">E-Mail</span></a
           >
         </li>
       </ul>
