Aggiornate immagini, nomi componenti, e link a RUNE

--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
         </header>
         <p>
           Goodbye Neverland è una band pop-punk italiana composta da sei amici:
-          Dario Voce, Roberto Voce, Stefano Basso, Emanuele Batteria, Andrea
+          Dario Voce, Roberto Voce, Stefano Basso, Alessandro Batteria, Andrea
           Chitarra e Francesco Chitarra. Il progetto ha preso vita nel 2020
           durante la quarantena, quando Dario ha deciso di riavvicinarsi alla
           musica, riarrangiando cover pop e pubblicando il suo primo singolo,
           "Crederci Ancora". Dopo vari cambi di formazione, nel dicembre 2022
           hanno consolidato la loro attuale formazione con la pubblicazione del
           brano "Cuori in affitto". Ora la band è pronta per il futuro, con
-          nuovi singoli in arrivo nel 2023, promettendo di continuare a suonare
+          nuovi singoli in arrivo nel 2024, promettendo di continuare a suonare
           il loro pop-punk unico e coinvolgente.
         </p>
       </div>
@@ -130,7 +130,7 @@
         <div class="gallery container-video">
           <iframe
             class="iframe-video"
-            src="https://www.youtube.com/embed/RvBP2GxRdPY"
+            src="https://www.youtube.com/embed/te_35m6VcDY"
             title="YouTube video player"
             frameborder="0"
             style="border-radius: 12px"
